--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,10 @@ repositories {
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+
+    // mockito
+    implementation 'org.mockito:mockito-core:5.11.0'
+
 }
 
 test {
